[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
default-run = "app"
edition = "2018"
build = "src/build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.0.0-beta.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.0.0-beta.8", features = ["dialog-open", "fs-all", "window-all"] }

tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1.52"
futures = "0.3.21"

[target.'cfg(windows)'.dependencies]
rdkafka = { version = "0.28", features = ["cmake-build"] }

[target.'cfg(unix)'.dependencies]
rdkafka = { version = "0.28" }

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]
